--- a/environments/staging/values.yaml
+++ b/environments/staging/values.yaml
@@ -74,6 +74,13 @@ prometheus:
       type: ClusterIP
   serverFiles:
     prometheus.yml:
+      global:
+        scrape_interval: 15s
+        evaluation_interval: 15s
+        external_labels:
+          environment: 'staging'
+      rule_files:
+        - "alert_rules.yml"
       scrape_configs:
         - job_name: prometheus
           static_configs:
@@ -94,20 +101,22 @@ prometheus:
           metrics_path: /actuator/prometheus
           static_configs:
             - targets: ['vets-service.petclinic-staging.svc.cluster.local:8083']
-    alerts:
+    alert_rules.yml:
       groups:
         - name: petclinic-staging-alerts
           rules:
             - alert: HighErrorRate
-              expr: increase(http_server_requests_seconds_count{status=~"4..|5.."}[30s]) > 15
-              for: 1m
+              expr: increase(http_server_requests_seconds_count{status=~"4..|5.."}[30s]) > 10
+              for: 0s
               labels:
                 severity: warning
                 environment: staging
                 service: "{{ $labels.job }}"
               annotations:
                 summary: "High error rate detected in staging"
-                description: "Service {{ $labels.job }} has more than 15 error requests in the last 30 seconds"
+                description: "Service {{ $labels.job }} has more than 10 error requests in the last 30 seconds. Current count: {{ $value }}"
+                trace_query: 'http_server_requests_seconds_count{job="{{ $labels.job }}", status=~"4..|5.."}'
+                log_query: '{namespace="petclinic-staging", container="{{ $labels.job }}"} |~ "ERROR|WARN"'
             - alert: ServiceDown
               expr: up == 0
               for: 1m
@@ -117,6 +126,15 @@ prometheus:
               annotations:
                 summary: "Service is down in staging"
                 description: "Service {{ $labels.job }} has been down for more than 1 minute"
+            - alert: HighResponseTime
+              expr: histogram_quantile(0.95, rate(http_server_requests_seconds_bucket[5m])) > 1.5
+              for: 2m
+              labels:
+                severity: warning
+                environment: staging
+              annotations:
+                summary: "High response time in staging"
+                description: "95th percentile response time for {{ $labels.job }} is above 1.5 seconds"
   alertmanagerFiles:
     alertmanager.yml:
       global:
@@ -145,12 +163,21 @@ loki-stack:
         datasources:
           - name: Prometheus
             type: prometheus
-            url: http://prometheus-server.petclinic-staging.svc.cluster.local
+            url: http://petclinic-staging-prometheus-server.petclinic-staging.svc.cluster.local
             access: proxy
+            isDefault: true
           - name: Loki
             type: loki
-            url: http://loki.petclinic-staging.svc.cluster.local:3100
+            url: http://petclinic-staging-loki.petclinic-staging.svc.cluster.local:3100
             access: proxy
+            jsonData:
+              derivedFields:
+                - name: "Trace ID"
+                  matcherRegex: "trace_id=(\\w+)"
+                  url: "/explore?orgId=1&left=%5B%22now-1h%22,%22now%22,%22Loki%22,%7B%22expr%22:%22%7Btrace_id%3D%5C%22$${__value.raw}%5C%22%7D%22%7D%5D"
+                - name: "Request ID"
+                  matcherRegex: "request_id=(\\w+)"
+                  url: "/explore?orgId=1&left=%5B%22now-1h%22,%22now%22,%22Loki%22,%7B%22expr%22:%22%7Brequest_id%3D%5C%22$${__value.raw}%5C%22%7D%22%7D%5D"
           - name: Jaeger
             type: jaeger
             url: http://tracing-server.petclinic-staging.svc.cluster.local:9411
@@ -172,7 +199,7 @@ loki-stack:
     enabled: true
     config:
       clients:
-        - url: http://loki.petclinic-staging.svc.cluster.local:3100/loki/api/v1/push
+        - url: http://petclinic-staging-loki.petclinic-staging.svc.cluster.local:3100/loki/api/v1/push
       scrape_configs:
         - job_name: kubernetes-pods
           kubernetes_sd_configs:
@@ -180,18 +207,35 @@ loki-stack:
               namespaces:
                 names: ['petclinic-staging']
           relabel_configs:
+            - source_labels: [__meta_kubernetes_pod_annotation_prometheus_io_scrape]
+              action: keep
+              regex: true
             - source_labels: [__meta_kubernetes_pod_container_name]
               target_label: container
             - source_labels: [__meta_kubernetes_namespace]
               target_label: namespace
             - source_labels: [__meta_kubernetes_pod_name]
               target_label: pod
+            - source_labels: [__meta_kubernetes_pod_label_app]
+              target_label: service
           pipeline_stages:
             - match:
                 selector: '{container=~".*petclinic.*"}'
                 stages:
                   - regex:
-                      expression: '.*traceId=(?P<trace_id>[a-f0-9]+).*'
+                      expression: '.*(?:traceId|trace.id|X-Trace-Id)[:=]\s*(?P<trace_id>[a-f0-9]+).*'
+                  - regex:
+                      expression: '.*(?:spanId|span.id|X-Span-Id)[:=]\s*(?P<span_id>[a-f0-9]+).*'
+                  - regex:
+                      expression: '.*(?:requestId|request.id|X-Request-Id)[:=]\s*(?P<request_id>[a-zA-Z0-9\-]+).*'
+                  - regex:
+                      expression: '.*\s(?P<level>ERROR|WARN|INFO|DEBUG|TRACE)\s.*'
+                  - regex:
+                      expression: '.*status[:=]\s*(?P<status_code>[0-9]+).*'
                   - labels:
                       trace_id:
+                      span_id:
+                      request_id:
+                      level:
+                      status_code:
                       environment: staging
