--- a/environments/prod/values.yaml
+++ b/environments/prod/values.yaml
@@ -17,7 +17,7 @@ services:
     useEureka: true
 
   customers-service:
-    enabled: false
+    enabled: true
     image: springcommunity/spring-petclinic-customers-service:latest
     containerPort: 8081
     port: 8081
